# strong_flags

./: CMakeLists.txt  LICENSE  README.md
include/strong_flags/: strong_flags.hpp
test/: CMakeLists.txt  test_main.cpp  unsigned_test.cpp
